api clean and bug fixes
